--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <header>
     <h1> Alura Book </h1>
-
+<span> <menu-hamburguer></span>
+<img src=" Logo Alura" alt="">
 </header>
 
 <body>
