--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <h1> Alura Book </h1>
 <span> <menu-hamburguer></span>
-<img src=" Logo Alura" alt="">
+<img src="img" alt="logo AluraBook">
 </header>
 
 <body>
