--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="css.reset">
     <link rel="stylesheet" href="style.css">
 </head>
-<header>
-    <h1> Alura Book </h1>
+<header class="cabecalho">
+ 
 <span> <menu-hamburguer></span>
 <img src="img" alt="logo AluraBook">
 </header>
-
+<a href="#"><img src="imagem/logo_alura.png" alt="" class="cabecalho__imagem"></a>
 <body>
 
 </body>
