--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 <span> <menu-hamburguer></span>
 <img src="img" alt="logo AluraBook">
 </header>
-<a href="#"><img src="imagem/logo_alura.png" alt="" class="cabecalho__imagem"></a>
+<header class="cabeçalho">
+    <div class="container">
+        <span class="cabeçalho__menu-hamburguer"></span>
+        <img src="img/Logo.svg" alt="Logo da AluraBooks">
+    </div>
+    <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+    <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+    <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+</header>
+
 <body>
 
 </body>
