--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="css.reset">
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
 <header class="cabecalho">
-
+    </div>
 <img src="img" alt="logo AluraBook">
 </header>
+
+
+
+
 <header class="cabeçalho">
     <div class="container">
         <span class="cabeçalho__menu-hamburguer"></span>
@@ -21,9 +26,4 @@
     <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
     <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
 </header>
-
 <body>
-
-</body>
-
-</html>
