--- a/index.html
+++ b/index.html
@@ -7,23 +7,17 @@
     <title>AluraBook</title>
     <link rel="stylesheet" href="css.reset">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="header.css">
 </head>
 <body>
-<header class="cabecalho">
-    </div>
-<img src="img" alt="logo AluraBook">
-</header>
+      <header class="cabeçalho">
+        <div class="container">
+            <span class="cabeçalho__menu-hamburguer><img src="" alt=""></span>
+            <img src="img/Logo.svg" alt="Logo da AluraBooks">
+        </div>
+        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+        <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+        <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+    </header>
 
-
-
-
-<header class="cabeçalho">
-    <div class="container">
-        <span class="cabeçalho__menu-hamburguer"></span>
-        <img src="img/Logo.svg" alt="Logo da AluraBooks">
-    </div>
-    <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
-    <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
-    <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
-</header>
-<body>
+    <body>
