--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
       <header class="cabeçalho">
         <div class="container">
-            <span class="cabeçalho__menu-hamburguer><img src="" alt=""></span>
+            <span class="cabeçalho__menu-hamburguer><img sr" alt=""></span>
             <img src="img/Logo.svg" alt="Logo da AluraBooks">
         </div>
         <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
