--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +8,37 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="header.css">
 </head>
-<body>
+<body
       <header class="cabeçalho">
         <div class="container">
-            <span class="cabeçalho__menu-hamburguer><img sr" alt=""></span>
-            <img src="img/Logo.svg" alt="Logo da AluraBooks">
+        <imput type="checkbox" id="menu" class="container__botao"
+        <label for="menu"
+            <span class ="cabeçalho__menu-hamburguer cabecalho__imagem" </span>
+        <label>
+            <ul class="lista-menu">
+                <li class="lista-menu__titulo">CATEGORIAS</li>
+                <li class="Lista-menu__item"> 
+                    <a href="#" class="lista-menu__link">PROGRAMAÇÃO</a>
+                </li>
+                <li class="Lista-menu__item">
+                    <a href="#" class="lista-menu__link">FRONT END</a>
+                </li>
+                    <a href="#" class="lista-menu__item"></a> 
+                <li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">INFRAESTRUTURA</a>
+                </li>
+                <li class="lista-menu__item"> 
+                    <a href="#" class="lista-menu__link"> BUSINESS</a>
+                </li>
+                <li class="lista-menu__link>"DESIGN & UX">
+                </li>
+            <ul>
+                <img src="img/Logo.svg" alt="Logo da Alura" class="cabecalho__logo">
         </div>
-        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
-        <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
-        <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="cabecalho__imagem</a>
+        <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class= Cabecalho__imagem></a>
+        <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="cabecalho__imagem"></a>
     </header>
-
     <body>
+<html>
