--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="cabecalho__imagem</a>
         <a href=" #"><img src="img/Compras.svg" alt="Carrinho de compras" class=Cabecalho__imagem></a>
-    <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="cabecalho__imagem"></a>
+    <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem"></a>
     </header>
 
     <body>
