--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <imput type="checkbox" id="menu" class="container__botao" <label for="menu" <span
             class="cabeçalho__menu-hamburguer cabecalho__imagem" </span>
             <label>
-                <ul class="lista-menu">
-                    <li class="lista-menu__titulo">CATEGORIAS</li>
+                <ul> 
+                    <li class="lista-menu">
+                    <li class="lista-menu__titulo">CATEGORIAS</li> 
+                                     
                     <li class="Lista-menu__item">
                         <a href="#" class="lista-menu__link">PROGRAMAÇÃO</a>
                     </li>
