--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body <header class="cabeçalho">
     <div class="container">
         <imput type="checkbox" id="menu" class="container__botao" <label for="menu" <span
-            class="cabeçalho__menu-hamburguer cabecalho__imagem" </span>
+            class="cabeçalho__menu-hamburguer/Cabecalho__imagem"></span>
             <label>
                 <ul> 
                     <li class="lista-menu">
@@ -35,11 +35,11 @@
                     </li>
                     <li class="lista-menu__link>" DESIGN & UX">
                     </li>
-                    <ul>
-                        <img src="img/Logo.svg" alt="Logo da Alura" class="cabecalho__logo">
-    </div>
+                <ul>
+    </div>                    
+    <a href="#> <"img/Logo.svg" alt="Logo da Alura" class="cabecalho__logo"></a>
     <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="cabecalho__imagem</a>
-        <a href=" #"><img src="img/Compras.svg" alt="Carrinho de compras" class=Cabecalho__imagem></a>
+    <a href=" #"><img src="img/Compras.svg" alt="Carrinho de compras" class=Cabecalho__imagem></a>
     <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem"></a>
     </header>
 
