--- a/index.html
+++ b/index.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AluraBook</title>
-    <link rel="stylesheet" href="css.reset">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="header.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AluraBooks</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
-<body <header class="cabeçalho">
+<body>
+  <header class="cabeçalho">
     <div class="container">
-        <imput type="checkbox" id="menu" class="container__botao" <label for="menu" <span
-            class="cabeçalho__menu-hamburguer/Cabecalho__imagem"></span>
-            <label>
-                <ul> 
-                    <li class="lista-menu">
-                    <li class="lista-menu__titulo">CATEGORIAS</li> 
-                                     
-                    <li class="Lista-menu__item">
-                        <a href="#" class="lista-menu__link">PROGRAMAÇÃO</a>
-                    </li>
-                    <li class="Lista-menu__item">
-                        <a href="#" class="lista-menu__link">FRONT END</a>
-                    </li>
-                    <a href="#" class="lista-menu__item"></a>
-                    <li>
-                    <li class="lista-menu__item">
-                        <a href="#" class="lista-menu__link">INFRAESTRUTURA</a>
-                    </li>
-                    <li class="lista-menu__item">
-                        <a href="#" class="lista-menu__link"> BUSINESS</a>
-                    </li>
-                    <li class="lista-menu__link>" DESIGN & UX">
-                    </li>
-                <ul>
-    </div>                    
-    <a href="#> <"img/Logo.svg" alt="Logo da Alura" class="cabecalho__logo"></a>
-    <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="cabecalho__imagem</a>
-    <a href=" #"><img src="img/Compras.svg" alt="Carrinho de compras" class=Cabecalho__imagem></a>
-    <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem"></a>
-    </header>
+      <input type="checkbox" id="menu" class="container__botao" />
+      <label for="menu">
+        <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+      </label>
+      <ul class="lista-menu">
+        <li class="lista-menu__titulo">Categorias</li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Programação</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Front-end</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Infraestrutura</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Business</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Design & UX</a>
+        </li>
+      </ul>
+      <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+    </div>
+    <div class="container">
+      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+      <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
+      <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+    </div>
+  </header>
+</body>
 
-    <body>
-
-        <html>
+</html>
