--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 
 <body>
  <header class="cabecalho">
+  <div class="container">
     <span class="cabecalho__menu-hamburguer"></span>
     <img src="img/Logo.svg" alt="" class="cabecalho__logo">
+  </div>
+  <div class="container__imagem">
     <a href="#"><img src="img/Favoritos.svg" alt="" cabecalho__imagem"></a>
     <a href="#"><img src="img/Compras.svg" alt="" class="cabecalho__imagem"></a>
     <a href="#"><img src="img/Usuário.svg" alt="" class="cabecalho__imagem"></a>
+  </div>
   </header> 
 </body>
 </html>
