--- a/index.html
+++ b/index.html
@@ -1,47 +1,56 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AluraBooks</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="styles.css">
+  <title>Document</title>
+  <link rel="stylesheet" href="css.reset">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="headers.css">
 </head>
 
 <body>
-  <header class="cabeçalho">
-    <div class="container">
-      <input type="checkbox" id="menu" class="container__botao" />
-      <label for="menu">
-        <span class="cabeçalho__menu-hamburguer container__imagem"></span>
-      </label>
-      <ul class="lista-menu">
-        <li class="lista-menu__titulo">Categorias</li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Programação</a>
-        </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Front-end</a>
-        </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Infraestrutura</a>
-        </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Business</a>
-        </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Design & UX</a>
-        </li>
-      </ul>
-      <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
-    </div>
-    <div class="container">
-      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
-      <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
-      <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
-    </div>
-  </header>
+ <header class="cabecalho">
+  <div class="container">
+    <span class="cabecalho__menu-hamburguer"></span>
+    <img src="img/Logo.svg" alt="" class="cabecalho__logo">
+  </div>
+  <div class="container__imagem">
+    <a href="#"><img src="img/Favoritos.svg" alt="" cabecalho__imagem"></a>
+    <a href="#"><img src="img/Compras.svg" alt="" class="cabecalho__imagem"></a>
+    <a href="#"><img src="img/Usuário.svg" alt="" class="cabecalho__imagem"></a>
+  </div>
+  </header> 
 </body>
-
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
