--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Alura Book</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="stiles.css">
+    <link rel="stylesheet" href="styles/header.css">
 </head>
 <body>
     <header class="cabecalho">
