--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Alura Book</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-<<<<<<< HEAD
+    <link rel="stylesheet" href="styles/header.css">
 </head >
 <body>
     <header class="cabecalho">
@@ -42,8 +42,6 @@
         <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="cabecalho__imagem"></a>
         <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem"></a>
       </div>
-
-
 
     </header>
     <body>
