--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <header class="cabecalho">
       <div class="container">
-        
+        <span class="cabecalho__menu-hamburger"></span>
+        <img src="img/Logo.svg" alt="Logo do Alura" class="cabeçalho__logo">
         <input type="checkbox" id="menu" class="container__botao">
         <label for="menu">
         </label>
-        <span class="cabecalho__menu-hamburger"></span>
         <ul class="lista-menu">
           <li class="lista-menu__titulo">CATEGORIAS</li>
           <li class="lista-menu__item">
