--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
     <header class="cabecalho">
       <div class="container">
-        <span class="cabecalho__menu-hamburger"></span>
-        <img src="img/Logo.svg" alt="Logo do Alura" class="cabeçalho__logo">
-        <input type="checkbox" id="menu" class="container__botao">
+        <span class="cabecalho__menu-hamburger"></span><input type="checkbox" id="menu" class="container__botao">
         <label for="menu">
         </label>
         <ul class="lista-menu">
