--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <header class="cabecalho">
       <div class="container">
-        <span class="cabecalho__menu-hamburger"></span><input type="checkbox" id="menu" class="container__botao">
+        <input type="checkbox" id="menu" class="container__botao">
+        <span class="cabecalho__menu-hamburger"></span>
         <label for="menu">
         </label>
         <ul class="lista-menu">
