--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <header class="cabecalho">
       <div class="container">
-        <input type="checkbox" id="menu" class="container__botao">
-        <span class="cabecalho__menu-hamburger"></span>
+      <span class="cabecalho__menu-hamburger"></span>
+      <img src="img/Logo.svg" alt="Logo do alura" class="cabeçalho__logo">
+      <input type="checkbox" id="menu" class="container__botao">  
+      <div>
         <label for="menu">
         </label>
         <ul class="lista-menu">
