--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <title>Alura Book</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-   </head >
+</head >
 <body>
     <header class="cabecalho">
       <div class="container">
       <span class="cabecalho__menu-hamburger"></span>
       <img src="img/Logo.svg" alt="Logo do alura" class="cabeçalho__logo">
-      <input type="checkbox" id="menu" class="container__botao">  
-      <div>
-        <label for="menu">
-        </label>
+      <input type="checkbox" id="menu" class="container__botao">
+        <label for="menu"></label>
         <ul class="lista-menu">
           <li class="lista-menu__titulo">CATEGORIAS</li>
           <li class="lista-menu__item">
@@ -34,7 +32,6 @@
             <a href="#" class="lista-menu__link">DESIGN & UX</a>
           </li>
         </ul>
-        <img src="img/Logo.svg" alt="Logo do alura" class="cabecalho__logo">
       </div>
       <div class="container__imagem">
       <div class="container">
