--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <span class="cabecalho__menu-hamburger"></span>
       <img src="img/Logo.svg" alt="Logo do alura" class="cabeçalho__logo">
       <input type="checkbox" id="menu" class="container__botao">
-        <label for="menu"></label>
+        <label for="menu">
         <ul class="lista-menu">
           <li class="lista-menu__titulo">CATEGORIAS</li>
           <li class="lista-menu__item">
@@ -31,6 +31,7 @@
           <li class="lista-menu__item">
             <a href="#" class="lista-menu__link">DESIGN & UX</a>
           </li>
+          <label>
         </ul>
       </div>
       <div class="container__imagem">
