--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header class="cabecalho">
       <div class="container">
-      <span class="cabecalho__menu-hamburger"></span>
-      <img src="img/Logo.svg" alt="Logo do alura" class="cabeçalho__logo">
-      <input type="checkbox" id="menu" class="container__botao">
-        <label for="menu">
+        <input type="checkbox" id="menu" class="container__botao"> 
+         <label for="menu">
+            <span class="cabecalho__menu-hamburger"></span>
+          </label>
         <ul class="lista-menu">
           <li class="lista-menu__titulo">CATEGORIAS</li>
           <li class="lista-menu__item">
@@ -31,8 +31,8 @@
           <li class="lista-menu__item">
             <a href="#" class="lista-menu__link">DESIGN & UX</a>
           </li>
-          <label>
         </ul>
+      <img src="img/Logo.svg" alt="Logo do alura" class="cabeçalho__logo">
       </div>
       <div class="container__imagem">
       <div class="container">
