--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <title>Alura Book</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
+
   <header class="cabecalho">
     <div class="container">
       <input type="checkbox" id="menu" class="container__botao">
@@ -44,6 +47,11 @@
       </div>
 
   </header>
+<section class="banner">
+<h2 class="banner__">Já sabe por onde começar?</h2>
+<p class="banner__text">Encontre em nossa estante o que precisa para seu desenvolvimento! </p>
+<imput tipeclass="banner__pesquisa" placeholder="Qual será a sua próxima leitura?">
 
+</secttio>
   <body>
     <html>
