--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
         <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="cabecalho__imagem"></a>
         <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem"></a>
       </div>
-
   </header>
 <section class="banner">
-<h2 class="banner__">Já sabe por onde começar?</h2>
-<p class="banner__text">Encontre em nossa estante o que precisa para seu desenvolvimento! </p>
-<imput tipeclass="banner__pesquisa" placeholder="Qual será a sua próxima leitura?">
-
-</secttio>
+<h2 class="banner__titulo">Já sabe por onde começar?</h2>
+<p class="banner__text">E/ncontre em nossa estante o que precisa para seu desenvolvimento!</p>
+<imput tipe = "sarch" class="banner__pesquisa" 
+placeholder="Qual será a sua próxima leitura?">
+</section>
   <body>
     <html>
