--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </header>
   <section class="banner">
     <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-    <p class="banner__text">E/ncontre em nossa estante o que precisa para seu desenvolvimento!</p>
+    <p class="banner__text">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
     <imput tipe="sarch" class="banner__pesquisa">
       placeholder="Qual será a sua próxima leitura?">
   </section>
