--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h2 class="banner__titulo">Já sabe por onde começar?</h2>
     <p class="banner__text">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
     <imput tipe="sarch" class="banner__pesquisa">
-      placeholder="Qual será a sua próxima leitura?">
+      "Qual será a sua próxima leitura?">
   </section>
   <body>
     <html>
