--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
   <section class="banner">
     <h2 class="banner__titulo">Já sabe por onde começar?</h2>
     <p class="banner__text">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
-    <imput tipe="sarch" class="banner__pesquisa">
-      "Qual será a sua próxima leitura?"
+    <imput tipe="sarch" class="banner__pesquisa"
+      placeholder="Qual será a sua próxima leitura?">
+    </imput>
   </section>
   <body>
     <html>
