--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h2 class="banner__titulo">Já sabe por onde começar?</h2>
     <p class="banner__text">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
     <imput tipe="sarch" class="banner__pesquisa"
-      aria-placeholder="Qual será a sua próxima leitura?">
+      placeholder="Qual será a sua próxima leitura?">
   </section>
   <body>
     <html>
