--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
   <p>
     <input type="search" class="banner_pesquisa" 
            placeholder="Qual será sua próxima leitura?">
+           <label for="search">
+            <span class="banner__pesquisa"> <img src="img/Pesquisa.svg" alt=""></span>
+           </label>
 </section>
   <body>
     <html>
