--- a/index.html
+++ b/index.html
@@ -8,32 +8,33 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header class="cabecalho">
     <div class="container">
       <input type="checkbox" id="menu" class="container__botao">
       <label for="menu">
-        <span class="cabecalho__menu-hamburger cabecalho__imagem"> </span>
+        <span class="cabecalho__menu-hamburger container__imagem"></span>
       </label>
       <ul class="lista-menu">
-        <li class="lista-menu__titulo">CATEGORIAS</li>
+        <li class="lista-menu__titulo">Categorias</li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">PROGRAMAÇÃO</a>
+          <a href="#" class="lista-menu__link">Programação</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">FRONT-END</a>
+          <a href="#" class="lista-menu__link">Front-end</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">INFRAESTRUTURA</a>
+          <a href="#" class="lista-menu__link">Infraestrutura</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">BUSINESS</a>
+          <a href="#" class="lista-menu__link">Businnes</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">DESIGN & UX</a>
+          <a href="#" class="lista-menu__link">Design & UX</a>
         </li>
       </ul>
       <img src="img/Logo.svg" alt="Logo do alura" class="cabeçalho__logo">
@@ -45,15 +46,11 @@
         <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem"></a>
       </div>
   </header>
-<section class="banner">
-  <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-  <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!
-  <p>
-    <input type="search" class="banner_pesquisa" 
-           placeholder="Qual será sua próxima leitura?">
-           <label for="search">
-            <span class="banner__pesquisa"> <img src="img/Pesquisa.svg" alt=""></span>
-           </label>
-</section>
+  <section class="banner">
+    <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+    <p class="banner__text">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+    <input tipe="sarch" class="banner__pesquisa" placeholder="Qual será a sua próxima leitura?">
+  </section>
+
   <body>
     <html>
