--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <p class="banner__text">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
     <input tipe="sarch" class="banner__pesquisa" placeholder="Qual será a sua próxima leitura?">
   </section>
-
+  <section class="carrossel">
+    <h2 class="carrossel__titulo">Novos lançamentos</h2>
+  </section>
   <body>
     <html>
