--- a/index.html
+++ b/index.html
@@ -50,6 +50,25 @@
     <p class="banner__text">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
     <input tipe="sarch" class="banner__pesquisa" placeholder="Qual será a sua próxima leitura?">
   </section>
+
+  <section class="Topicos">
+    <h2>Tópicos Visitados recentemente</h2>
+    <ul class="Topicos__listas">
+      <li class="topicos__itens"> <a href="#" class="Topicos__link">Android</a></li>
+      <li class="topicos__itens"> <a href="#" class="Topicos__link">Marketing Digital</a></li>
+      <li class="topicos__itens"> <a href="#" class="Topicos__link">Android</a></li>
+      <li class="topicos__itens"> <a href="#" class="Topicos__link">Agile</a></li>
+      <li class="topicos__itens"> <a href="#" class="Topicos__link">HTML e CSS</a></li>
+      <li class="topicos__itens"> <a href="#" class="Topicos__link">OO</a></li>
+      <li class="topicos__itens"> <a href="#" class="Topicos__link">Java</a></li>
+    </ul>
+  </section>tópicos__lista
+
+
+
+
+
+
   <section class="carrossel">
     <h2 class="carrossel__titulo">Novos lançamentos</h2>
     <!-- Slider main container -->
@@ -74,7 +93,7 @@
 </div>
   </section>
 
-  
+
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <body>
     <html>
