--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
     <p class="banner__text">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
     <input tipe="sarch" class="banner__pesquisa" placeholder="Qual será a sua próxima leitura?">
   </section>
-
-  <section class="Topicos">
+  <section class="topicos">
     <h2>Tópicos Visitados recentemente</h2>
-    <ul class="Topicos__listas">
+    <ul class="topicos__listas">
       <li class="topicos__itens"> <a href="#" class="Topicos__link">Android</a></li>
       <li class="topicos__itens"> <a href="#" class="Topicos__link">Marketing Digital</a></li>
       <li class="topicos__itens"> <a href="#" class="Topicos__link">Android</a></li>
@@ -63,11 +62,6 @@
       <li class="topicos__itens"> <a href="#" class="Topicos__link">Java</a></li>
     </ul>
   </section>tópicos__lista
-
-
-
-
-
 
   <section class="carrossel">
     <h2 class="carrossel__titulo">Novos lançamentos</h2>
