--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 <section class="topicos">
  <h3>Tópicos visitados recentemente</h3>
  <ul class="topicos__lista">
-  <li class="topicos__itens"> <a href="#" class="Topicos__link">Android</a></li>
-  <li class="topicos__itens"> <a href="#" class="Topicos__link">Marketing Digital</a></li>
-  <li class="topicos__itens"> <a href="#" class="Topicos__link">Android</a></li>
-  <li class="topicos__itens"> <a href="#" class="Topicos__link">Agile</a></li>
-  <li class="topicos__itens"> <a href="#" class="Topicos__link">HTML e CSS</a></li>
-  <li class="topicos__itens"> <a href="#" class="Topicos__link">OO</a></li>
-  <li class="topicos__itens"> <a href="#" class="Topicos__link">Java</a></li>
+  <li class="topicos__itens"> <a href="#" class="topicos__link">Android</a></li>
+  <li class="topicos__itens"> <a href="#" class="topicos__link">Marketing Digital</a></li>
+  <li class="topicos__itens"> <a href="#" class="topicos__link">Android</a></li>
+  <li class="topicos__itens"> <a href="#" class="topicos__link">Agile</a></li>
+  <li class="topicos__itens"> <a href="#" class="topicos__link">HTML e CSS</a></li>
+  <li class="topicos__itens"> <a href="#" class="topicos__link">OO</a></li>
+  <li class="topicos__itens"> <a href="#" class="topicos__link">Java</a></li>
  </ul>
 </section>
 
