--- a/index.html
+++ b/index.html
@@ -68,5 +68,12 @@
       <input type="email" placeholder="Cadastre seu e-mail"
       class="contato__email">
       </section>
+      <section class="carrossel">
+        <h2 class="carrossel__titulo">Novos lançamentos</h2>
+      </section>
+      <footer>
+        <h3>ALURA</h3>
+      </footer>
   </body>
+
 </html>
