--- a/index.html
+++ b/index.html
@@ -59,13 +59,15 @@
       <!-- Slider main container -->
 <div class="swiper">
   <!-- Additional required wrapper -->
-  <div class="swiper-wrapper">
-    <!-- Slides -->
-    <div class="swiper-slide">Slide 1</div>
-    <div class="swiper-slide">Slide 2</div>
-    <div class="swiper-slide">Slide 3</div>
-    ...
+  <div class="swiper-wrapper"><img src="img/ApacheKafka.png" alt="slide1">
+    <div class="swiper-slide"><img src="img/Liderança.png" alt="slide2"></div>
+    <div class="swiper-slide"><img src="img/Javascript.png" alt="">Slide 2</div>
+    <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="">Slide 3</div>
+    <div class="swiper-slide"><img src="img/Portugol.png" alt="">Slide 3</div>
+    <div class="swiper-slide"><img src="img/Portugol.png" alt="">Slide 3</div>
+    <div class="swiper-slide"><img src="img/acessibilidade" alt="">Slide 3</div>
   </div>
+  
   <!-- If we need pagination -->
   <div class="swiper-pagination"></div>
 
