--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 <link
     rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-  />
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <body>
     <header class="cabecalho">
       <div class="container">
@@ -56,6 +54,9 @@
     </section>
     <section class="carrossel">
       <h2 class="carrossel__titulo">Novos lançamentos</h2>
+    </section>
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+      <!--slider main container -->
       <!-- Slider main container -->
 <div class="swiper">
   <!-- Additional required wrapper -->
@@ -67,7 +68,7 @@
     <div class="swiper-slide"><img src="img/Portugol.png" alt="">Slide 3</div>
     <div class="swiper-slide"><img src="img/acessibilidade" alt="">Slide 3</div>
   </div>
-  
+
   <!-- If we need pagination -->
   <div class="swiper-pagination"></div>
 
