--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
       <!-- Slider main container -->
 <div class="swiper">
   <!-- Additional required wrapper -->
-  <div class="swiper-wrapper"><img src="img/ApacheKafka.png" alt="slide1">
-    <div class="swiper-slide"><img src="img/Liderança.png" alt="slide2"></div>
-    <div class="swiper-slide"><img src="img/Javascript.png" alt="">Slide 2</div>
-    <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="">Slide 3</div>
-    <div class="swiper-slide"><img src="img/Portugol.png" alt="">Slide 3</div>
-    <div class="swiper-slide"><img src="img/Portugol.png" alt="">Slide 3</div>
+  <div class="swiper-wrapper"><img src="img/ApacheKafka.png" alt="Livro sobre Kafka">
+    <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre liderança"></div>
+    <div class="swiper-slide"><img src="img/Javascript.png" alt="">livro javascript</div>
+    <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="">Livro Front-end</div>
+    <div class="swiper-slide"><img src="img/Portugol.png" alt="">Livro Portugol</div>
+    <div class="swiper-slide"><img src="img/" alt="">Slide 3</div>
     <div class="swiper-slide"><img src="img/acessibilidade" alt="">Slide 3</div>
   </div>
 
