--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
@@ -53,11 +54,10 @@
       <input type="search" class="banner__pesquisa" placeholder="Qual será a sua próxima leitura?">
     </section>
     <section class="carrossel">
-      <h2 class="carrossel__titulo">Novos lançamentos</h2>
+      <h2 class="carrossel__titulo">Novos lançamentos</h2> 
+      <!-- Slider main container -->
     </section>
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-      <!--slider main container -->
-      <!-- Slider main container -->
 <div class="swiper">
   <!-- Additional required wrapper -->
   <div class="swiper-wrapper"><img src="img/ApacheKafka.png" alt="Livro sobre Kafka">
@@ -65,7 +65,7 @@
     <div class="swiper-slide"><img src="img/Javascript.png" alt="">livro javascript</div>
     <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="">Livro Front-end</div>
     <div class="swiper-slide"><img src="img/Portugol.png" alt="">Livro Portugol</div>
-    <div class="swiper-slide"><img src="img/" alt="">Slide 3</div>
+    <div class="swiper-slide"><img src="img/Javascript.png" alt="">S</div>
     <div class="swiper-slide"><img src="img/acessibilidade" alt="">Slide 3</div>
   </div>
 
