--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
           </li>
         </ul>
         <img src="img/Logo.svg" alt="Logo do alura" class="cabecalho__logo">
+<h1>
+  <class="container__titulo"> <b> container__titulo--texto
+  </b></class>
+</h1>
+  .b classcontainer__texto--texto">
+
+  </div>
+</div>
+
+
       </div>
       <div class="container">
         <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="cabecalho__imagem"></a>
