--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
           </li>
         </ul>
         <img src="img/Logo.svg" alt="Logo do alura" class="cabecalho__logo">
-<h1>
-  <class="container__titulo"> <b> container__titulo--texto
-  </b></class>
+  <h1 class="container__titulo">
+    <b class="container__titulo--negrito">Alura/b>Books
 </h1>
   .b classcontainer__texto--texto">
 
