--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ swap" rel="stylesheet">
           <li class="lista-menu__item">
             <a href="#" class="lista-menu__link">INFRAESTRUTURA</a>
           </li>
-          <li class="lista-menu__item">
+          <li class="lista-menu__item"
             <a href="#" class="lista-menu__link">BUSINESS</a>
           </li>
           <li class="lista-menu__item">
@@ -43,8 +43,9 @@ swap" rel="stylesheet">
           </li>
         </ul>
         <img src="img/Logo.svg" alt="Logo do alura" class="cabecalho__logo">
-       <h1 class="container__titulo">
-<b class="container__titulo--negrito">Alura Books
+        <h1 class="container__titulo">
+          <b class="container__titulo--negrito">Alura/b>Books
+          </h1>
 </h1>
   </div>
       <div class="container">
