--- a/index.html
+++ b/index.html
@@ -36,7 +36,18 @@
           </li>
         </ul>
         <img src="img/Logo.svg" alt="Logo do alura" class="cabecalho__logo">
-      </div>
+      <h1 class="container__titulo">
+        <b class="container__titulo--negrito">Alura/b>Books
+        </h1>
+      <ul class="opcoes">
+      <li class="opcoes__item">Categorias</li>
+      <li class="opcoes__item">
+      <a href="#" class="opcoes__link">Favoritos</a>
+      </li>
+      <li class="opcoes__item">
+      <a href="#" class="opcoes__link">Minha Estante</a>
+      </li>
+      </ul>
       <div class="container">
         <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="cabecalho__imagem"></a>
         <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="cabecalho__imagem"></a>
