--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <h1 class="container__titulo">
         <b class="container__titulo--negrito">Alura/b>Books
         </h1>
+        <div>
       <ul class="opcoes">
       <li class="opcoes__item">Categorias</li>
       <li class="opcoes__item">
@@ -48,6 +49,7 @@
       <a href="#" class="opcoes__link">Minha Estante</a>
       </li>
       </ul>
+      </div>
       <div class="container">
         <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="cabecalho__imagem"></a>
         <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="cabecalho__imagem"></a>
