--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         </h1>
         <div>
           <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
+            <label for="opcoes-menu">
+            <li class="opcoes__item">Categorias</li>
+            </label>
             <li class="opcoes__item">Categorias</li>
             <li class="opcoes__item">
             <a href="#" class="opcoes__link">Favoritos</a>
@@ -52,7 +56,6 @@
       </div>
       <div class="container">
         <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="cabecalho__imagem container__imagem-transparente"></a>
-
         <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="cabecalho__imagem"></a>
         <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem"></a>
       </div>    
