--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <input type="checkbox" id="menu" class="container__botao">
         <label for="menu">
           <span class="cabecalho__menu-hamburger cabecalho__imagem"></span>
-        </label>
-        
+        </label
         <ul class="lista-menu">
           <li class="lista-menu__titulo">CATEGORIAS</li>
           <li class="lista-menu__item">
@@ -56,10 +55,20 @@
           </ul>
       </div>
       <div class="container">
-        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="cabecalho__imagem container__imagem-transparente"></a>
-        <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="cabecalho__imagem"></a>
-        <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem"></a>
-      </div>    
+        <a href="#">
+          <img src="img/Favoritos.svg" alt="Meus favoritos"
+          class="container__imagem container__imagem-transparente">
+          
+          </a>
+          <a href="#" class="container__link">
+          <img src="img/compras.svg" alt="Minhas Compras" class="container__imagem">
+          <p class="container__texto">Minhas Compras</p>
+          </a>
+          <a href="#" class="container__link">
+          <img src="img/Usuario.svg" alt="Meu Perfil" class="container__imagem">
+          <p class="container__texto">Meu Perfil</p>
+          </a>
+          </div>  
     </header>
     <section class="banner">
       <h2 class="banner__titulo">Já sabe por onde começar?</h2>
