--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </a>
           <a href="#" class="container__link">
           <img src="img/Usuario.svg" alt="Meu Perfil" class="container__imagem">
-          <p class="container__texto">Meu Perfil</p>
+          <p.class="container__texto">Meu Perfil</p>
           </a>
           </div>  
     </header>
