--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+<link href="href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=
+swap" rel="stylesheet">">
 </head>
 <body>
     <header class="cabecalho">
@@ -36,10 +38,10 @@
           </li>
         </ul>
         <img src="img/Logo.svg" alt="Logo do alura" class="cabecalho__logo">
-      <h1 class="container__titulo">
-        <b class="container__titulo--negrito">Alura/b>Books
-        </h1>
-        <div>
+        <h1 class="container__titulo">
+          <b class="container__titulo--negrito">Alura/b>Books
+          </h1>
+          <div>
           <ul class="opcoes">
             <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
             <label for="opcoes-menu">
