--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-<link href="href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=
-swap" rel="stylesheet">">
 </head>
 <body>
     <header class="cabecalho">
@@ -18,43 +16,39 @@ swap" rel="stylesheet">">
         <input type="checkbox" id="menu" class="container__botao">
         <label for="menu">
           <span class="cabecalho__menu-hamburger cabecalho__imagem"></span>
+        </label>
+        <ul class="lista-menu">
+          <li class="lista-menu__titulo">CATEGORIAS</li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">PROGRAMAÇÃO</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">FRONT-END</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">INFRAESTRUTURA</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">BUSINESS</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">DESIGN & UX</a>
+          </li>
+        </ul>
         <img src="img/Logo.svg" alt="Logo do alura" class="cabecalho__logo">
-      <div>
-          <ul class="opcoes">
-            <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
-            <label for="opcoes-menu">
-            <li class="opcoes__item">Categorias</li>
-            </label>
-            <li class="opcoes__item">Categorias</li>
-            <li class="opcoes__item">
-            <a href="#" class="opcoes__link">Favoritos</a>
-            </li>
-            <li class="opcoes__item">
-            <a href="#" class="opcoes__link">Minha Estante</a>
-            </li>
-          </ul>
       </div>
       <div class="container">
-        <a href="#">
-          <img src="img/Favoritos.svg" alt="Meus favoritos"
-          class="container__imagem container__imagem-transparente">
-          
-          </a>
-          <a href="#" class="container__link">
-          <img src="img/compras.svg" alt="Minhas Compras" class="container__imagem">
-          <p class="container__texto">Minhas Compras</p>
-          </a>
-          <a href="#" class="container__link">
-          <img src="img/Usuario.svg" alt="Meu Perfil" class="container__imagem">
-          <p.class="container__texto">Meu Perfil</p>
-          </a>
-          </div>  
+        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="cabecalho__imagem"></a>
+        <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="cabecalho__imagem"></a>
+        <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem"></a>
+      </div>    
     </header>
     <section class="banner">
       <h2 class="banner__titulo">Já sabe por onde começar?</h2>
       <p class="banner__text">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
       <input type="search" class="banner__pesquisa" placeholder="Qual será a sua próxima leitura?">
     </section>
+
     <section class="topicos">
       <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
       <ul class="topicos__lista">
@@ -67,7 +61,6 @@ swap" rel="stylesheet">">
         <li class="topicos__itens"><a href="#" class="topicos__link">Java</a></li>       
       </ul>
     </section>
-    
     <section class="contato">
       <h2 class="contato__titulo"> Fique por dentro das novidades</h2>
       <p class="contato__texto"> Atualizações de e-books, novos livros,
