--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           </li>
         </ul>
         <img src="img/Logo.svg" alt="Logo do alura" class="cabecalho__logo">
+        <h1 class="container__titulo">
+          <b class="container__titulo--negrito">Alura/b>Books
+        </h1>
       </div>
       <div class="container">
         <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="cabecalho__imagem"></a>
@@ -48,7 +51,6 @@
       <p class="banner__text">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
       <input type="search" class="banner__pesquisa" placeholder="Qual será a sua próxima leitura?">
     </section>
-
     <section class="topicos">
       <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
       <ul class="topicos__lista">
