--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ swap" rel="stylesheet">
           <li>
           <li class="opcoes__item"><a href class="opcoes__link">Minha Estante </a></li>
         </ul>
-        <div class="container">Favoritos</a>
+        <div class="container"></a>
           <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"
               class="cabecalho__imagem container__imagem-transparente"></a>
           <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="cabecalho__imagem "></a>
