--- a/index.html
+++ b/index.html
@@ -70,21 +70,17 @@ swap" rel="stylesheet">
           <li>
           <li class="opcoes__item"><a href class="opcoes__link">Minha Estante </a></li>
         </ul>
-        <div class="container">
+        <div class="container"></a>
           <a href="#">
-          <img src="img/Favoritos.svg" alt="Meus favoritos"
-          class="container__imagem container__imagem-transparente">
-          
+            <img src="img/Favoritos.svg" alt="Meus favoritos"
+              class="cabecalho__imagem container__imagem-transparente">
           </a>
-          <a href="#" class="container__link">
-          <img src="img/compras.svg" alt="Minhas Compras" class="container__imagem">
-          <p class="container__texto">Minhas Compras</p>
+          <a href="#">
+            <img src="img/Compras.svg" alt="Carrinho de compras" class="cabecalho__imagem ">
           </a>
-          <a href="#" class="container__link">
-          <img src="img/Usuario.svg" alt="Meu Perfil" class="container__imagem">
-          <p class="container__texto">Meu Perfil</p>
+          <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="cabecalho__imagem">
           </a>
-          </div>
+        </div>
   </header>
   <section class="banner">
     <h2 class="banner__titulo">Já sabe por onde começar?</h2>
